[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apex"
version = "0.0.1"
description = "Autonomous Project Execution Platform"
authors = [
    { name = "Salvador Hernandez" }
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pyyaml",
    "rich",
    "typer",
    "pydantic",
]

[project.scripts]
apex = "apex.main:app"
